fix: mar activities__title & word wrap card__title

--- a/css/style.css
+++ b/css/style.css
@@ -1199,6 +1199,14 @@ template {
     margin-bottom: 42px;
   }
 
+  .activities {
+    padding-top: 20px;
+  }
+  .activities__title {
+    margin-bottom: 36px;
+    margin-top: 0;
+  }
+
   .card {
     width: 100%;
   }
