--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -178,5 +178,10 @@
       font-size: 18px
       line-height: 23px
       margin-bottom: 42px
+  .activities
+    padding-top: 20px
+    &__title
+      margin-bottom: 36px
+      margin-top: 0
   .card
     width: 100%
